# yt-upload-worker

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
app/src/: ffmpeg_handler.py  main.py  message_processor.py
app/src/accessors/: blobstoreaccessor.py  cosmosaccessor.py
app/src/yt_upload_worker.egg-info/: PKG-INFO  SOURCES.txt
